--- a/src/main/resources/templates/businessregistration.html
+++ b/src/main/resources/templates/businessregistration.html
@@ -65,7 +65,7 @@
         <div>
             <h1>Business Registration</h1>
         </div>
-        <form th:action="@{/process_register}" th:object="${user}"
+        <form th:action="@{/process_register/bus}" th:object="${user}"
             method="post" style="max-width: 400px; margin: 0 auto;">
         <div class="m-3">
             <div class="form-group row">
@@ -86,20 +86,21 @@
              <div class="form-group row">
                 <label class="col-4 col-form-label">Company Name: </label>
                 <div class="col-8">
-                    <input type="password" th:field="*{password}" class="form-control"
-                            required minlength="8" maxlength="10"/>
+                    <input type="text" th:field="*{companyName}" class="form-control"
+                            required/>
                 </div>
             </div>
              
-             <div class="form-group row">
+<!--              <div class="form-group row">
                 <label class="col-4 col-form-label">Company ID: </label>
                 <div class="col-8">
-                   <input type="text" id="rand" disabled> 
+                	<input type="text" th:text="${companyID}" disabled/>
+                   <input type="text" th:field="*{companyID}" id="rand" disabled/> 
                    <br>
                    <small id="emailHelp" class="form-text text-muted">This is your assigned company ID.</small>
           
                 </div>
-            </div>
+            </div> -->
              
             <div>
                 <button type="submit" class="btn btn-primary">Sign Up</button>
