--- a/src/main/resources/templates/individualregistration.html
+++ b/src/main/resources/templates/individualregistration.html
@@ -15,7 +15,7 @@
         <div class="text-danger">
 			<h3>[[${message}]]</h3>
 		</div>
-        <form th:action="@{/process_register}" th:object="${user}"
+        <form th:action="@{/process_register/ind}" th:object="${user}"
             method="post" style="max-width: 400px; margin: 0 auto;">
         <div class="m-3">
             <div class="form-group row">
