--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
 <meta name="description" content="UI-2">
-<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/main.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -18,7 +18,7 @@
 <div class="topnav">
 	<a class="active" th:href="@{/main}" style="color:white">CWRU Databite</a>
     <a th:href="@{/account}">Account</a>
-    <a href="documentation.html">Tutorial</a>	
+    <a th:href="@{/tutorial}">Tutorial</a>	
  	<a class="active" style = "color:white"> Welcome, <b>[[${#request.userPrincipal.principal.fullName}]]</b></a>
  	<a class="active">
 		<form th:action="@{/logout}" method="POST">
