--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -91,7 +91,7 @@
                         		<a class = "btn btn-light" th:href="@{'/download?id='+${data.datasetID}}" title="Download dataset"><i class="fa fa-download"></i></a>
                                 <!-- <button><i class="fa fa-pencil"></i></button> -->
                                 <!-- <button><i class="fa fa-bar-chart"></i></button> -->
-                                <a class = "btn btn-light" th:href="@{/charts}" title="Visualize data" th:onclick="|storeBlob(${data.content})|"><i class="fa fa-bar-chart"></i></a>
+                                <a class = "btn btn-light" th:href="@{/charts}" title="Visualize data" th:onclick="|storeBlob(${data.content})|" href="./charts.html"><i class="fa fa-bar-chart"></i></a>
                                 <a class = "btn btn-light" th:href="@{/main/delete_dataset/{id}(id=${data.datasetID})}" title="Delete dataset" onClick="return confirm('Are you sure you want to delete?')"><i class="fa fa-trash"> </i></a> 
                             </td>   
                             <td></td> 
