--- a/src/main/resources/templates/individualregistration.html
+++ b/src/main/resources/templates/individualregistration.html
@@ -32,6 +32,15 @@
                             required minlength="8" maxlength="10"/>
                 </div>
             </div>
+            
+            <div class="form-group row">
+                <label class="col-4 col-form-label">Company ID: </label>
+                <div class="col-8">
+                    <input type="number" th:field="*{companyID}" class="form-control"/>
+                    <small id="help" class="form-text text-muted">(Optional) Enter to join a company</small>
+                </div>
+            </div>
+            
              
             <div>
                 <button type="submit" class="btn btn-primary">Sign Up</button>
