--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,7 +17,7 @@
 
 <div class="topnav">
 	<a class="active" th:href="@{/main}" style="color:white">CWRU Databite</a>
-    <a th:href="@{/account}">Account</a>
+    <a th:href="@{/account}" sec:authentication="principal.fullName">Account</a>
     <a th:href="@{/tutorial}">Tutorial</a>	
  	<a class="active" style = "color:white"> Welcome, <b>[[${#request.userPrincipal.principal.fullName}]]</b></a>
  	<a class="active">
@@ -29,6 +29,9 @@
 
 
 <div class="container">
+	<div class="text-danger" style="text-align:center;">
+			<h3>[[${message}]]</h3>
+	</div>
       <div class="content-panel">
         <div class="content-header-wrapper">
         	<br>
@@ -88,11 +91,11 @@
                         	<!-- <td th:text="${data.name}">Name</td> -->
                         	<!-- <td th:text="${data.size}">Size</td> -->
                         	<td class="actions">
-                        		<a class = "btn btn-light" th:href="@{'/download?id='+${data.datasetID}}" title="Download dataset"><i class="fa fa-download"></i></a>
-                                <!-- <button><i class="fa fa-pencil"></i></button> -->
-                                <!-- <button><i class="fa fa-bar-chart"></i></button> -->
+                        		<a class = "btn btn-light" th:href="@{'/download?id='+${data.datasetID}}" title="Download Dataset"><i class="fa fa-download"></i></a>
+                                <a class = "btn btn-light" th:href="@{/remove_duplicates}" title="Remove Duplicates"><i class="fa fa-minus-circle"></i></a>
+                                <a class = "btn btn-light" th:href="@{/fill_missing}" title="Fill Missing Values"><i class="fa fa-plus-circle"></i></a>
                                 <a class = "btn btn-light" th:href="@{/charts}" title="Visualize data"><i class="fa fa-bar-chart"></i></a>
-                                <a class = "btn btn-light" th:href="@{/main/delete_dataset/{id}(id=${data.datasetID})}" title="Delete dataset" onClick="return confirm('Are you sure you want to delete?')"><i class="fa fa-trash"> </i></a> 
+                                <a class = "btn btn-light" th:href="@{/main/delete_dataset/{id}(id=${data.datasetID})}" title="Delete Dataset" onClick="return confirm('Are you sure you want to delete?')"><i class="fa fa-trash"> </i></a> 
                             </td>   
                             <td></td> 
                         </tr>
@@ -101,6 +104,3 @@
             </div>
         </div>  
     </div>
-</div>
-</div>
-</div>
