--- a/src/main/resources/templates/charts.html
+++ b/src/main/resources/templates/charts.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta name="description" content="UI-1">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/charts.css">
+    <link rel="stylesheet" href="../static/css/charts.css">
  
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="../static/js/parser.js"></script>
     <title>Charts</title>
     
@@ -51,6 +52,22 @@
         <div class="scatterPlot" id="spTitle"></div>
 
 
+        <div class="boxPlotChart">
+            <input type="checkbox" id="boxPlot" name="boxPlot" onclick="createBoxPlotFields();">
+            <label for="boxPlot">Box plot</label>
+        </div>
+
+        <div class="boxPlot" id="bpTitle"></div>
+
+
+        <div class="heatMapChart">
+            <input type="checkbox" id="heatMap" name="heatMap" onclick="createHeatMapFields();">
+            <label for="heatMap">Heat map</label>
+        </div>
+
+        <div class="heatMap" id="hmTitle"></div>
+
+
         <div class="submitButton">
             <button type="submit" class="btn btn-primary" id="generateCharts" onClick="generate();return false;">Generate Charts</button>
         </div>
@@ -83,36 +100,43 @@
             <canvas id="sp"></canvas>
         </div>
         <div id="spImage"></div>
+
+
+        <div class="innerPositions">
+            <div class="bpImage" id="bpImage"></div>
+        </div>
+
+
+        <div class="innerPositions">
+            <div class="hmImage" id="hmImage"></div>
+        </div>
+        
         
     </div>
 
     <script>
-        // Data
-        //var data = 
-
         // Global chart values
         var polarArea;
         var histogram;
         var lineGraph;
         var scatterPlot;
-
-        var paIMG;
-        var hIMG;
-        var lgIMG;
-        var spIMG;
+        var boxPlot;
+        var heatMap;
 
         // Global field variables
         var polarAreaTitle;
         var histogramTitle;
         var lineGraphTitle;
         var scatterPlotTitle;
+        var boxPlotTitle;
+        var heatMapTitle
         
         var polarAreaTitleInput = "";
         var histogramTitleInput = "";
         var lineGraphTitleInput = "";
         var scatterPlotTitleInput = "";
-
-        var lineGraphColor;
+        var boxPlotTitleInput = "";
+        var heatMapTitleInput = "";
 
 
         // ---------------------------------------------------------------------------------
@@ -138,6 +162,16 @@
                 scatterPlotTitleInput = document.getElementById('SPtitle').value;
                 generateScatterPlot(); }
             else { if (scatterPlot) { scatterPlot.destroy(); }}
+
+            if(document.getElementById('boxPlot').checked) { 
+                boxPlotTitleInput = document.getElementById('BPtitle').value;
+                generateBoxPlot(); }
+            else { if (boxPlot) { boxPlot.destroy(); }}
+
+            if(document.getElementById('heatMap').checked) { 
+                heatMapTitleInput = document.getElementById('HMtitle').value;
+                generateHeatMap(); }
+            else { if (heatMap) { heatMap.destroy(); }}
         }
 
 
@@ -336,6 +370,74 @@
         }
 
 
+        function generateBoxPlot() {
+            // Generate the labels and data sets
+            var myStr = localStorage.getItem("dataString")
+            var myLabels = getLabels(myStr);
+            var myData = getData(myStr);
+
+            // Create the chart
+            let chart = document.querySelector("#bpImage");
+
+            boxPlot = new ApexCharts(chart, {
+                series: [
+                    {
+                        type: 'boxPlot',
+                        data: formatBDatasets(myData, myLabels)
+                    }
+                ],
+                chart: {
+                    type: 'boxPlot',
+                    width: 800,
+                    height: 400
+                },
+                title: {
+                    text: boxPlotTitleInput,
+                    align: 'center'
+                },
+                plotOptions: {
+                    boxPlot: {
+                        colors: {
+                            upper: '#5C4742',
+                            lower: '#A5978B'
+                        }
+                    }
+                }
+            });
+            boxPlot.render();
+
+            // Download is a built-in function of ApexCharts
+        }
+
+
+        function generateHeatMap() {
+            // Generate the labels and data sets
+            var myStr = localStorage.getItem("dataString")
+            var myLabels = getLabels(myStr);
+            var myData = getData(myStr);
+
+            // Create the chart
+            let chart = document.querySelector("#hmImage");
+
+            heatMap = new ApexCharts(chart, {
+                series: formatHDatasets(myData, myLabels),
+                chart: {
+                    type: 'heatmap',
+                    width: 800,
+                    height: 400
+                },
+                colors: ["#008FFB"],
+                title: {
+                    text: heatMapTitleInput,
+                    align: 'center'
+                }
+            });
+            heatMap.render();
+
+            // Download is a built-in function of ApexCharts
+        }
+
+
         // ---------------------------------------------------------------------------------
         
         // Create required user input fields for each chart
@@ -350,8 +452,6 @@
                 polarAreaTitle.remove(); 
                 polarAreaTitle = null;
             }
-
-            // Color scheme
         }
 
 
@@ -366,8 +466,6 @@
                 histogramTitle.remove(); 
                 histogramTitle = null;
             }
-
-            // Color scheme
         }
 
 
@@ -381,11 +479,6 @@
             else { 
                 lineGraphTitle.remove(); 
                 lineGraphTitle = null;
-            }
-
-            // Color scheme
-            if (!lineGraphColor) {
-                
             }
         }
 
@@ -401,9 +494,39 @@
                 scatterPlotTitle.remove(); 
                 scatterPlotTitle = null;
             }
-
-            // Color scheme
         }
+
+
+        function createBoxPlotFields() {
+            // Title
+            if (!boxPlotTitle) {
+                boxPlotTitle = document.createElement('div');
+                boxPlotTitle.innerHTML = "<label for='title'>Title:</label><input type='text' id='BPtitle'>";
+                document.getElementById("bpTitle").appendChild(boxPlotTitle);
+            }
+            else { 
+                boxPlotTitle.remove(); 
+                boxPlotTitle = null;
+            }
+        }
+
+
+        function createHeatMapFields() {
+            // Title
+            if (!heatMapTitle) {
+                heatMapTitle = document.createElement('div');
+                heatMapTitle.innerHTML = "<label for='title'>Title:</label><input type='text' id='HMtitle'>";
+                document.getElementById("hmTitle").appendChild(heatMapTitle);
+            }
+            else { 
+                heatMapTitle.remove(); 
+                heatMapTitle = null;
+            }
+        }
+
+
+        let myBlob = new Blob(['Jan 2015,Jan 2016,Jan 2017,Jan 2018,Jan 2019,Jan 2020,Jan 2021\n54,43,31,39,29,41,54\n66,65,39,46,31,49,59\n69,69,49,55,35,58,66\n75,76,51,65,39,61,71\n88,81,59,71,44,67,88'], {type: 'text/plain'})
+        storeBlob(myBlob);
     </script>
 
 </body>
