add data display

--- a/src/main/resources/templates/charts.html
+++ b/src/main/resources/templates/charts.html
@@ -21,7 +21,7 @@
     <form>
         <div class="polarAreaChart">
             <input type="checkbox" id="polarArea" name="polarArea" onclick="createPolarAreaFields();">
-            <label for="polarArea">Polar area chart</label>
+            <label for="polarArea">[[${chartData}]]</label>
         </div>
 
         <div class="polarAreaTitle" id="paTitle"></div>
