--- a/src/main/resources/templates/charts2.html
+++ b/src/main/resources/templates/charts2.html
@@ -21,7 +21,8 @@
     <form>
         <div class="polarAreaChart">
             <input type="checkbox" id="polarArea" name="polarArea" onclick="createPolarAreaFields();">
-            <label for="polarArea">Polar area chart</label>
+            <label for="polarArea">Polar Graph</label>
+            <p>data: [[${chartData.username}]]</p>
         </div>
 
         <div class="polarAreaTitle" id="paTitle"></div>
