--- a/src/main/resources/templates/tutorial.html
+++ b/src/main/resources/templates/tutorial.html
@@ -22,19 +22,101 @@
 </div>
 
 <div>
-	<h1 style="text-align:center;">How To Use CWRU Databite</h1>
-	<br>
-	<h5>
-		<ol>
-			<li>Upload your dataset. Accepted file types include csv, txt, tsv, sql. </li>
-			<li>Visualize your dataset. Generate graphs such as histograms, scatterplots, line graphs, and polar area charts.</li>
-			<li>Remove duplicates samples from your dataset.</li>
-			<li>Treat missing data in your dataset.</li>
-			<li>Download cleaned dataset.</li>
-			<li>Delete uploaded dataset.</li>
-		</ol>
-		
-	</h5>
+	<p>**</p>
+<h1 id="what-is-cwru-databite">What is CWRU Databite?</h1>
+<p>The CWRU Databite is a website that allows users to upload data for preprocessing and cleaning. Oftentimes data cleaning, data preprocessing, and visualization are time consuming, yet essential in data analytics. CWRU Databite has come up with data processing and visualization tools useful for users even without technical background and unfamiliar with the process. After uploading and processing the data, the user will be able to visualize that data on the website and export the cleaned data.</p>
+<h2 id="account-types">Account Types</h2>
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody><tr>
+<td>Features/ User Type</td>
+<td>User</td>
+<td>Company Admin</td>
+</tr>
+<tr>
+<td>Clean data</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>Store data</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
+<tr>
+<td>Share data</td>
+<td>Not applicable</td>
+<td>Users under company</td>
+</tr>
+<tr>
+<td>Manager other users</td>
+<td>Not applicable</td>
+<td>Users under company</td>
+</tr>
+</tbody></table>
+<h1 id="usage">Usage</h1>
+<p><img alt="" src="https://lh3.googleusercontent.com/IGIz-9nXeZ9p2KKatdmwZxe7-UB143vD5rREOBo9_r3FolfX3fkkf0Wuzyg9wTdvM-G31jFoIPa6dTcVyR4kyUw0Fqn15PCybg4wgFwRPc5d9bVpogy-yeIrec930KFy70W1iTMk"></p>
+<h2 id="login-page">Login Page</h2>
+<p>To login to your created account, enter your email as the username and then your password.</p>
+<p><img alt="" src="https://lh5.googleusercontent.com/dKHXSt95Qsv6nVTRRu0F6b0munEo4brYkzJ6fY_IXJQKZpGXuHt-00G4Kn2GoQI7iss4xAnSQTjDpUegM_o-76bYRRS7PjtOTSJ3otZrEFkvw4CeVBVArDeVVMwBj6fS6Z0qziov"></p>
+<h2 id="sign-up-page">Sign Up Page</h2>
+<p><img alt="" src="https://lh6.googleusercontent.com/AnvkZNSFgZHY7T9Cnk3EaE_S4ewjzYJY5ovuHPBV9WvUaDYe3KWd1Hw90tt-JPZJtcm3U7SYtB0jK9KojmBbo-Y84cIh6hYIJUSCmv8A86ns4zTBzl36RO0wjdI2qL03PV7kaI-Z"></p>
+<p>In the sign up page, you can choose which type of account to sign up for. You can create an individual account by entering an email address and password. If you are registering for an account to be used under a company, you can also fill in the optional company ID box to join the company.</p>
+<p><img alt="" src="https://lh3.googleusercontent.com/9RSkReCoK4bJvwbmKirCadWKb29buiObb4iTRA1c_rwska0-j6BHIeWu3eKcQnTxVakFJ6aI69lzWrl_uN2xes6B_hzgT9wRrVFR7XdiiTXcGK48Tn9hur3lMVF52DDB7dXoI-Sb"></p>
+<p>If you wish to register a new company, you can select the business account option in the login page. This will bring up a sign up form which includes an extra box to enter your company name.</p>
+<p><img alt="" src="https://lh5.googleusercontent.com/wTWvjxHkVxksIWfr8epK0moLyjDe7brq4zlSIa8BqON7S5prd20kN0KsufsN37JdLw525UBYy45Ofm5h1lAWU-DXxUCU2lMnCctqmhUWzsbBO4HJKyAFG_EzBKt8_HLMmtAsNzgT"></p>
+<h2 id="data-upload">Data Upload</h2>
+<p><img alt="" src="https://lh5.googleusercontent.com/SzFaEtBFFeY3tMuBEum5Zkoyc3WNDKxILIRlw9NmKEzxUWFW7zsM_CBdtERo-imq_UQke3iFxt_5YsH_qGcMT0jSDjBvCok3rjpFoz28f83BRGGfFleec5uzzjSq0mRcmDLzQkEy"></p>
+<p>This option is available on the main page as the button “Upload New Item”. In order to upload a file you select a file using the file browsing window.</p>
+<p>Acceptable file types include:</p>
+<p>CSV, TSV, txt, dat, sql, xml</p>
+<p>The “View Datasets” button needs to be clicked in order to display the existing datasets that are stored.</p>
+<h2 id="visualizing-data">Visualizing data</h2>
+<p><img alt="" src="https://lh4.googleusercontent.com/Jo7cCK902OOdFMbycTSqaSvsTm7s2j3CNdci4ENcE-AxgGSzOM48L7_U54gr2uhIPAIl6PE_KElqoYcJj2R_qBV9dJJ2uNuGQzdClyg4TzDPbSXowVG4m6if91wp-QzB2H-_4IHU"></p>
+<p>After logging into your account, you will have the option to upload datasets for cleaning. Click on “View Datasets” to see previously uploaded data. For each row, you can have the option to save the data to a local disk, remove duplicate data, normalize the data and standardize data. You may also choose to visualize data using the graph button. </p>
+<p><img alt="" src="https://lh6.googleusercontent.com/EuZgAmMWSdFDAHhK84yp8vbXsjekUjL6W8eTeJLC0ejA7DHdWvH21ugm1tqwYOtJzeAHRgT2ZJ16v_uIzi8XUTA9mCBQF5lKoYdT7Jbyzp7UzopSR8tdLAOGmWdPnDyn4LeIGbgv"></p>
+<h2 id="data-download">Data Download</h2>
+<p>After the “View Datasets” button is clicked, under Actions, you can click the “Download Dataset” button to download the dataset as the file type it is saved as in its current state. </p>
+<h2 id="account-page">Account page</h2>
+<p>For individual users they will see the My Account tab with the options to change their password or delete their account. To change your password, you enter your new password twice and then click the “Change Password” button. The “Delete My Account” button will prompt you for confirmation for deleting your account. Upon confirmation, your account will be deleted and you will be redirected to the default login/signup page.</p>
+<p><img alt="" src="https://lh4.googleusercontent.com/-fv80n_aU0CsoMWozejVMvevff_51xovVC1FEZMtnyGFF0reWuQa-WK7-PI16F41f-QZO3X3idSdNNAC2T423-kwMuyf4cgsn2taXSjG9fhAJHhkFhLchCs9qSbsyK8e9VruHLVi"></p>
+<p>The Manageable Users page is only visible to users who are company admins. In order to view users in the company, the user will have to click on the “View Users” button. They have the option to remove accounts who are not company admins and under their company. They can also upgrade existing accounts to company admin accounts for the company.</p>
+<p><img alt="" src="https://lh5.googleusercontent.com/MdP2wsbKkYaRySs9YU_f_CW7hdSVylxUqKIXHiOD1WSyDb3GmlWQX9Lp_JCxV9s5qykHxak4NHQw32DlPzE4gN9-lhh26aXf7zxKg7e1zvIg5HBofKjVmH-FXNweypGnGu6VZ5sX"></p>
+<h2 id="data-cleaning">Data Cleaning</h2>
+<p><img alt="" src="https://lh4.googleusercontent.com/Jo7cCK902OOdFMbycTSqaSvsTm7s2j3CNdci4ENcE-AxgGSzOM48L7_U54gr2uhIPAIl6PE_KElqoYcJj2R_qBV9dJJ2uNuGQzdClyg4TzDPbSXowVG4m6if91wp-QzB2H-_4IHU"></p>
+<p>After logging into your account, you will have the option to upload datasets for cleaning. Click on “View Datasets” to see previously uploaded data. For each row, you can have the option to save the data to a local disk, remove duplicate data, normalize the data and standardize data. You may also choose to visualize data using the graph button.</p>
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody><tr>
+<td>Data cleaning option</td>
+<td>Description</td>
+</tr>
+<tr>
+<td>Remove missing data</td>
+<td>Converts the sparse matrix to a dense matrix and then saves the file as the dense version by removing “0”</td>
+</tr>
+<tr>
+<td>Normalize the data</td>
+<td>rescale values into range in [0,1]</td>
+</tr>
+<tr>
+<td>Standardize the data<br></td>
+<td>rescale to mean-zero and unit standard deviation</td>
+</tr>
+</tbody></table>
+<p>**</p>
+
 </div>
 </body>
 </html>
